update homepage.jsp and add head.html

--- a/src/main/webapp/components/head.html
+++ b/src/main/webapp/components/head.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" href="../img/favicon/favicon9.png">
+<!-- bootstrap css -->
+<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="../css/bootstrap-icons.css">
+<!-- magnific-popup css -->
+<link rel="stylesheet" type="text/css" href="../css/magnific-popup.css">
+<!-- fontawesome css -->
+<link rel="stylesheet" type="text/css" href="../css/all.min.css">
+<!--fether css -->
+<link rel="stylesheet" type="text/css" href="../css/feather.css">
+<!-- animate css -->
+<link rel="stylesheet" type="text/css" href="../css/animate.min.css">
+<!-- owl-carousel css -->
+<link rel="stylesheet" type="text/css" href="../css/owl.carousel.min.css">
+<link rel="stylesheet" type="text/css" href="../css/owl.theme.default.min.css">
+<!-- swiper css -->
+<link rel="stylesheet" type="text/css" href="../css/swiper-bundle.min.css">
+<!-- slick slider css -->
+<link rel="stylesheet" type="text/css" href="../css/slick.css">
+<!-- collection css -->
+<link rel="stylesheet" type="text/css" href="../css/collection.css">
+<!-- blog css -->
+<link rel="stylesheet" type="text/css" href="../css/blog.css">
+<!-- other-pages css -->
+<link rel="stylesheet" type="text/css" href= "../css/other-pages.css">
+<!-- product-page css -->
+<link rel="stylesheet" type="text/css" href="../css/product-page.css">
+<!-- style css -->
+<link rel="stylesheet" type="text/css" href="../css/style2.css">
