--- a/src/main/webapp/components/head.html
+++ b/src/main/webapp/components/head.html
@@ -27,4 +27,4 @@
 <!-- product-page css -->
 <link rel="stylesheet" type="text/css" href="../css/product-page.css">
 <!-- style css -->
-<link rel="stylesheet" type="text/css" href="../css/style2.css">
+<link rel="stylesheet" type="text/css" href="../css/homepage.css">
